--- a/css/index.css
+++ b/css/index.css
@@ -168,7 +168,7 @@ input[type="number"] {
   margin: auto;
   text-align: end;
   height: 20px;
-  width: 150px;
+  width: 200px;
   box-sizing: border-box;
   background-color: indigo;
   color: #fff;
@@ -179,13 +179,14 @@ input[type="number"] {
 .display {
   margin: auto;
   text-align: end;
-  height: 20px;
-  width: 150px;
+  height: 30px;
+  width: 200px;
   background-color: indigo;
   color: #ffffff;
   border-left: 1px solid #000000;
   border-right: 1px solid #000000;
   box-sizing: border-box;
+  font-size: 1.5em;
 }
 
 .calk-body {
@@ -195,8 +196,8 @@ input[type="number"] {
 .opers {
   margin: auto;
   border: 1px solid #000000;
-  width: 150px;
-  height: auto;
+  width: 200px;
+  height: 250px;
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 20% 20% 20% 20% 20%;
